After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 655474 - gvfs-copy: Do not use deprecated g_format_size_for_display()
gvfs-copy: Do not use deprecated g_format_size_for_display()
Status: RESOLVED FIXED
Product: gvfs
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gvfs-maint
gvfs-maint
Depends on:
Blocks:
 
 
Reported: 2011-07-28 07:02 UTC by Vincent Untz
Modified: 2011-08-15 13:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gvfs-copy: Do not use deprecated g_format_size_for_display() (1.42 KB, patch)
2011-07-28 07:02 UTC, Vincent Untz
committed Details | Review

Description Vincent Untz 2011-07-28 07:02:32 UTC
It got deprecated in glib 2.29.14.
Comment 1 Vincent Untz 2011-07-28 07:02:34 UTC
Created attachment 192797 [details] [review]
gvfs-copy: Do not use deprecated g_format_size_for_display()
Comment 2 Tomas Bzatek 2011-08-15 13:35:22 UTC
Committed, thanks for watching the API changes!

commit 5c80cd3163391e2c589ce7ef80426391dff110ce
Author: Vincent Untz <vuntz@gnome.org>
Date:   Mon Aug 15 15:33:45 2011 +0200

    gvfs-copy: Do not use deprecated g_format_size_for_display()
    
    https://bugzilla.gnome.org/show_bug.cgi?id=655474