gvfs-copy: Do not use deprecated g_format_size_for_display()

https://bugzilla.gnome.org/show_bug.cgi?id=655474